--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-rest-swagger==2.2.0
 djangorestframework==3.13.1
 drf-yasg==1.21.3
 executing==1.2.0
+gunicorn==20.1.0
 idna==3.3
 inflection==0.5.1
 ipdb==0.13.9
