--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.13.0
 pyparsing==3.0.9
+python-dotenv==0.21.0
 pytz==2022.2.1
 reportlab==3.6.12
 requests==2.28.1
