--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.3.0
 prompt-toolkit==3.0.31
+psycopg2-binary==2.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.13.0
